Accept --add-exports